# github-tg-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
bot/: __main__.py  main.py
bot/handlers/: callbacks.py  commands.py  messages.py
bot/keyboards/: inline.py
bot/services/: database.py  formatter.py  github.py  polling.py  webhook.py
bot/utils/: __init__.py  callbacks.py  constants.py  github.py  repository.py  token_manager.py
